syntax = "proto3";
package sessionpb;
option go_package = "./sessionpb";

message Session {
    string id = 1;
    string user_id = 2;
    repeated string permissions = 3;
    int64 issued_at = 4;
    int64 last_used_at = 5;
    int64 expires_at = 6;
}
